# distributed-sptam

./: CMakeLists.txt  README.md  README.txt  package.xml  sptam_plugin.xml
configurationFiles/: bumblebee.yaml  firefly.yaml  kitti.yaml  kitti_star_brief.yaml  kitti_star_brisk.yaml  kitti_star_latch.yaml  mobius.yaml  rawseedBicocca.yml
launch/: dsptam_euroc-mapper.launch  dsptam_euroc-tracker.launch  dsptam_euroc.launch  dsptam_kitti-mapper.launch  dsptam_kitti-tracker.launch  dsptam_kitti.launch
msg/: msg_KeyFrame.msg  msg_MapPoint.msg  msg_Meas_id.msg  msg_Measurement.msg  msg_feature.msg  msg_kp.msg  msg_mapDiff.msg
scripts/: comparisonPlotter.py  mathHelpers.py  plot-KITTI-benchmark.py  plot-avg-errors.py  plotHelpers.py  pretty_boxplot.py  sptam_parser.py
src/ros/: CMakeLists.txt  SPTAMInterface.cpp  SPTAMInterface.hpp  SPTAMNodelet.cpp  map_node.cpp  parameters_opencv2.hpp  parameters_opencv3.hpp  sptam_node.cpp  tracker_node.cpp
src/sptam/: BundleDriver.cpp  BundleDriver.hpp  CMakeLists.txt  FeatureExtractorThread.cpp  FeatureExtractorThread.hpp  Frame.cpp  Frame.hpp  ImageFeatures.cpp  KeyFramePolicy.hpp  Map.hpp  MapMaker.cpp  MapMaker.hpp  MapMakerThread.cpp  MapMakerThread.hpp  MapPoint.cpp  MapPoint.hpp  Measurement.cpp  Measurement.hpp  MotionModel.cpp  MotionModel.hpp  StereoFrame.cpp  StereoFrame.hpp  TrackingReport.cpp  TrackingReport.hpp  g2o_driver.cpp  g2o_driver.hpp  mapNode.cpp  mapNode.hpp  match_to_points.cpp  sptam.cpp  sptam.hpp  sptamParameters.hpp  tracker.cpp  tracker.hpp  tracker_g2o.cpp  tracker_g2o.hpp
src/sptam/loopclosing/: LCDetector.hpp  LoopClosing.cpp  LoopClosing.hpp  PoseEstimator.cpp  PoseEstimator.hpp  StereoMatcher.cpp  StereoMatcher.hpp
src/sptam/loopclosing/detectors/: DLDBriefLoopDetector.cpp  DLDBriefLoopDetector.hpp
src/sptam/utils/: CovisibilityGraph.hpp  messages_handler.hpp  tf_utils.hpp  translations.hpp
src/sptam/utils/draw/: Draw.cpp  Draw.hpp
src/sptam/utils/log/: Logger.cpp  Profiler.hpp
src/standAlone/: CMakeLists.txt  SptamWrapper.cpp  SptamWrapper.hpp  SptamWrapperThread.cpp  Timestamps.cpp  configuration_parser_opencv3.hpp  stam-KITTI.cpp
src/standAlone/Test/BundleAdjustment/: CMakeLists.txt  bag2o.cpp
src/standAlone/Test/covariance/: test-covariance.cpp
src/standAlone/gui/: PCLVisualizer.cpp  PointCloud.cpp
